vertical align refer, other footer styling fixes

--- a/location/static/location/sass/main.scss
+++ b/location/static/location/sass/main.scss
@@ -45,14 +45,16 @@ header {
 
 footer {
     position: absolute;
+    display: table;
     bottom: 0;
     width: 100%;
     background-color: rgba(0,0,0, 0.5);
-    padding: 1em;
+    padding: 0.75em 1.5em;
     box-sizing: border-box;
 
     #refer {
-        float: right;
+        display: table-cell;
+        vertical-align: middle;
         text-decoration: none;
 
         span {
@@ -151,7 +153,7 @@ footer {
     height: $PLACE_HEIGHT;
     background-position: center;
     float: left;
-    margin: 0 5px;
+    margin: 0 10px 0 0;
     cursor: pointer;
 
     &.active {
